--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Overflow by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Insecure Cyber Raid</title>
@@ -32,11 +27,13 @@
 				</header>
 				<p>Tools online</a>.</p>
 				<footer>
-					<a href="#first" class="button style2 scrolly">1</a>
+					<a href="https://thun73r.github.io/insecure-cyber-raid/cj" class="button style2 scrolly">Click Jacking Tester</a>
 				</footer>
 				<br>
+	<footer>
+		<a href="https://thun73r.github.io/insecure-cyber-raid/emailfaker" class="button style2 scrolly">Email Faker</a>
 				<footer>
-					<a href="http://insecureraid.vphs.top/form/" class="button style2 scrolly">Form Diskusi</a>
+					<a href="https://thun73r.github.io/insecure-cyber-raid/form" class="button style2 scrolly">Form Diskusi</a>
 				</footer>
 				</br>
 
