--- a/emailfaker/index.html
+++ b/emailfaker/index.html
@@ -1,42 +1,10 @@
-<!--
-    ######################################################
-      _____                          _____                 _ _     ____                     __
-     |__  /__ _  __ _  __ _ _ __    | ____|_ __ ___   __ _(_) |   / ___| _ __   ___   ___  / _| ___ _ __
-       / // _` |/ _` |/ _` | '__|   |  _| | '_ ` _ \ / _` | | |   \___ \| '_ \ / _ \ / _ \| |_ / _ \ '__|
-      / /| (_| | (_| | (_| | |      | |___| | | | | | (_| | | |    ___) | |_) | (_) | (_) |  _|  __/ |
-     /____\__,_|\__, |\__,_|_|      |_____|_| |_| |_|\__,_|_|_|   |____/| .__/ \___/ \___/|_|  \___|_|
-                   |_|                                                  |_|
-
-   Zaqar: The Email Spoofer v1.3
-   Created by: Tobin Shields
-   Other contributors: [None as of now]
-   Github: https://github.com/TobinShields/Zaqar_EmailSpoofer
-   Resources Used:
-                   Bootstrap 4
-                   (Front-end Framework)
-                   https://getbootstrap.com/
-
-                   Simditor
-                   (Ritch Text Editor)
-                   http://simditor.tower.im/
-
-                   PHPMailer
-                   (The classic email sending library for PHP)
-                   https://github.com/PHPMailer/PHPMailer
-
-                   Subtle Patterns
-                   (Background image)
-                   https://www.toptal.com/designers/subtlepatterns/
-
-    ######################################################
- -->
 
 
 <!DOCTYPE html>
 <html lang="en">
     <head>
 
-        <title>Zaqar | Spoof all the emails!</title>
+        <title>Insecure Raid Spoofer</title>
 
         <!-- Required meta tags -->
         <meta charset="utf-8">
@@ -60,10 +28,6 @@
     <!-- Background image set here -->
     <body style="background-image: url('img/bg.png');">
 
-    <!-- Github sticky -->
-    <div class="github-sticky">
-        <p>Zaqar v1.3 - Support this project on <a href="https://github.com/TobinShields/Zaqar_EmailSpoofer">Github</a></p>
-    </div>
 
     <!-- Main container. It is thinner so it's using a col-6 with an offset -->
     <div class="col-md-6 offset-md-3">
