--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				</header>
 				<p>Tools online</a>.</p>
 				<footer>
-					<a href="/cj" class="button style2 scrolly">Click Jacking Tester</a>
+					<a href="/clickjacking" class="button style2 scrolly">Click Jacking Tester</a>
 				</footer>
 				<br>
 	<footer>
