--- a/index.html
+++ b/index.html
@@ -37,17 +37,18 @@
 	<footer>
 					<a href="/zone-h" class="button style2 scrolly">Zone-H Mass Mirror</a>
 				</footer>
-	<br>
 					<br>
 					<h1>Lainnya...</h1>
 				<footer>
 					
-					<a href="https://thun73r.github.io/insecure-cyber-raid/form" class="button style2 scrolly">Form Diskusi</a>
+					<a href="/form" class="button style2 scrolly">Form Diskusi</a>
 				</footer>
+	<br>
 	<footer>
 					<a href="/nulis" class="button style2 scrolly">Bot nulis</a>
-		<br>
 				</footer>
+	<br>
+	<footer>
 					<a href="wa.me/+6285333831716" class="button style2 scrolly">Laporkan masalah</a>
 				</footer>
 				</br>
