--- a/zone-h/index.html
+++ b/zone-h/index.html
@@ -58,7 +58,7 @@ textarea {width:400px;height:195px;}
 	?>
 <div id="footer">
 <hr color="white">
-<center><font color="red" face="Orbitron" size="4"><p>Copyright @ 2020 - Thunder Gans<font color="white">| <font color="red">Special <font color="white">Thx to Mr.Bumblebee</p></a></font></center>
+<center><font color="red" face="Orbitron" size="4"><p>Copyright @ 2020 - Thunder Gans<font color="white">| <font color="red">Team <font color="white">Insecure Raid</p></a></font></center>
 </center>
 
 </body>
