--- a/index.html
+++ b/index.html
@@ -27,29 +27,29 @@
 				</header>
 				<p>Tools online</a>.</p>
 				<footer>
-					<a href="/clickjacking" class="button style2 scrolly">Click Jacking Tester</a>
+					<a href="https://thun73r.github.io/insecure-cyber-raid/clickjacking" class="button style2 scrolly">Click Jacking Tester</a>
 				</footer>
 				<br>
 	<footer>
-		<a href="/emailfaker" class="button style2 scrolly">Email Faker</a>
+		<a href="https://thun73r.github.io/insecure-cyber-raid/emailfaker" class="button style2 scrolly">Email Faker</a>
 	</footer>
 	<br>
 	<footer>
-					<a href="/zone-h" class="button style2 scrolly">Zone-H Mass Mirror</a>
+					<a href="https://thun73r.github.io/insecure-cyber-raid/zone-h" class="button style2 scrolly">Zone-H Mass Mirror</a>
 				</footer>
 					<br>
 					<h1>Lainnya...</h1>
 				<footer>
 					
-					<a href="/form" class="button style2 scrolly">Form Diskusi</a>
+					<a href="https://thun73r.github.io/insecure-cyber-raid/form" class="button style2 scrolly">Form Diskusi</a>
 				</footer>
 	<br>
 	<footer>
-					<a href="/nulis" class="button style2 scrolly">Bot nulis</a>
+					<a href="https://thun73r.github.io/insecure-cyber-raid/nulis" class="button style2 scrolly">Bot nulis</a>
 				</footer>
 	<br>
 	<footer>
-					<a href="wa.me/+6285333831716" class="button style2 scrolly">Laporkan masalah</a>
+					<a href="https://wa.me/+6285333831716" class="button style2 scrolly">Laporkan masalah</a>
 				</footer>
 				</br>
 
